--- a/my-app/src/components/home/index.css
+++ b/my-app/src/components/home/index.css
@@ -138,7 +138,7 @@ justify-content: space-between;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    margin-top: 30%;
+    margin-top: 200px;
 }
 
 .checkbox-input {
